--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,8 @@ jobs:
 
               # Now we have got the access of EC2 and we will start the deploy .
               cd /home/ubuntu/testingCD &&
-              echo ls &&
+              echo dekho &&
+              ls &&
               git checkout master &&
               git fetch --all &&
               git reset --hard origin/master &&
