--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
               git reset --hard origin/master &&
               git pull origin master &&
               sudo npm i &&
-              sudo pm2 stop index.js &&
-              sudo pm2 start index.js
+              ls &&
+              sudo pm2 stop ./index.js &&
+              sudo pm2 start ./index.js
               '
