--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,5 +32,5 @@ jobs:
               sudo npm i &&
               ls &&
               # sudo pm2 stop ./index.js &&
-              sudo node ./index.js
+              sudo node index.js
               '
