--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
               git pull origin master &&
               sudo npm i &&
               ls &&
-             pm2 stop /home/ubuntu/testingCD/index.js &&
-             pm2 start /home/ubuntu/testingCD/index.js
+              pm2 kill &&
+              pm2 start index.js
+              pm2 save
               '
